	  do_gotolinecolumn(), do_delete(), and find_paragraph(). (DLR)
	- Add new -L/--nonewlines command line option, and new
	  "nonewlines" rcfile option, to control whether nano adds
	  magiclines to the ends of files.  Changes to read_file(),
	  write_marked_file(), move_to_filestruct(),
	  copy_from_filestruct(), usage(), do_output(), main(),
	  do_replace_loop(), do_delete(), nano.1, nanorc.5, nano.texi,
	  and nanorc.sample. (DLR, suggested by Jaime
	  <re2823@Safe-mail.net>)
	- Move functions specific to the file browser to their own
	  source file, and adjust related variables accordingly.  New
	  file browser.c; changes to striponedir(), browser_init(),
	  do_browser(), and do_browse_from() (all moved to browser.c).
	  (DLR)
	- Add the statusbar prompt's equivalent of placewewant,
	  statusbar_pww, to prompt.c, and convert its functions to use
	  it.  New functions reset_statusbar_cursor() and
	  need_statusbar_horizontal_update(); changes to
	  do_statusbar_mouse(), do_statusbar_output(),
	  do_statusbar_home(), do_statusbar_end(), do_statusbar_right(),
	  do_statusbar_left(), do_statusbar_delete(),
	  do_statusbar_cut_text(), do_statusbar_next_word(),
	  do_statusbar_prev_word(), do_statusbar_verbatim_input(),
	  nanoget_repaint() (renamed update_statusbar_line()),
	  nanogetstr() (renamed get_prompt_string()), statusq() (renamed
	  do_prompt()), statusq_abort() (renamed do_prompt_abort()), and
	  do_yesno() (renamed do_yesno_prompt()). (DLR)
	- Initialize the static pid_t pid in text.c. (DLR)
- chars.c:
  mbwidth()
	- If wcwidth() returns -1 for the character passed in, treat the
	  character as having the width of Unicode U+FFFD (Replacement
	  Character) instead of having a width of zero, since display
	  problems can crop up with the latter approach. (DLR)
- files.c:
  read_file()
	- Remove apparently unneeded logic to handle a case where
	  current is NULL, since it shouldn't be NULL there. (DLR)
- nano.c:
  do_verbatim_input()